2019-10-27  Fred Kiefer <fredkiefer@gmx.de>

	* Headers/Foundation/NSUnit.h,
	* Headers/Foundation/NSMeasurement.h,
	* Headers/Foundation/NSMeasurementFormatter.h,
	* Headers/Foundation/NSEnergyFormatter.h,
	* Headers/Foundation/NSLengthFormatter.h,
	* Headers/Foundation/NSMassFormatter.h,
	* Source/NSUnit.m,
	* Source/NSMeasurement.m,
	* Source/NSMeasurementFormatter.m,
	* Source/NSEnergyFormatter.m,
	* Source/NSLengthFormatter.m,
	* Source/NSMassFormatter.m,
	* Source/NSUnit.m: More cleanup on the measurement code.

2019-10-29  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSStream.h,
	* Source/GSStream.m,
	* Source/GSSocketStream.m:
	Use a more sane implementation to redirect event handling to the
	TLS handler while in a handshake.

	* Source/GSTLS.m:
	Fall back to a sane default if the TLS priority setting is invalid.

2019-10-28  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSSocketStream.m:
	Prevent premature deallocation when a socket is closed while in a
	TLS handshake.

2019-10-27  Fred Kiefer <fredkiefer@gmx.de>

	* Headers/Foundation/NSUnit.h,
	* Source/NSUnit.m: Clean up code and fix bugs.

2019-10-17  Frederik Seiffert <frederik@algoriddim.com>

	* Source/GSDispatch.h:
	* Source/NSArray.m:
	* Source/NSDictionary.m:
	* Source/NSIndexSet.m:
	* Source/NSOrderedSet.m:
	* Source/NSSet.m:
	Perform non-concurrent block enumeration calls in place instead
	of using serial queue to match Apple platforms.

2019-10-25  Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSMapTable.h:
	* Headers/Foundation/NSHashTable.h:
	Added generics support to NSMapTable and updated NSMapTable and
	NSHashTable to use "instancetype".

2019-10-02  Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSDictionary.m: fixed mutable dictionary keyed subscript
	behavior: assigning nil value via keyed subscript now correctly
	removes object for key.

2019-09-25  Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSProcessInfo.h: